<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.fpoly.foodapp.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_daily_meal"
        android:name="com.fpoly.foodapp.ui.daily_meal.DailyMealFragment"
        android:label="@string/title_daily_meal"
        tools:layout="@layout/fragment_daily_meal" />

    <fragment
        android:id="@+id/navigation_favourite"
        android:name="com.fpoly.foodapp.ui.favourite.FavouriteFragment"
        android:label="@string/title_favourite"
        tools:layout="@layout/fragment_favourite" />
    <fragment
        android:id="@+id/navigation_account"
        android:name="com.fpoly.foodapp.ui.account.AccountManagerFragment"
        android:label="@string/title_acc"
        tools:layout="@layout/fragment_account" />
    <fragment
        android:id="@+id/navigation_home_new"
        android:name="com.fpoly.foodapp.ui.home.HomeFragmentNew"
        android:label="@string/title_acc"
        tools:layout="@layout/fragment_home_new" />
</navigation>